--- a/README.org
+++ b/README.org
@@ -102,3 +102,13 @@ PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License along with
 this program.  If not, see <http://www.gnu.org/licenses/>.
+
+* Internal Notes
+
+Because I keep forgetting the Org mode formatting:
+
+#+BEGIN_EXAMPLE
+You can make words *bold*, /italic/, _underlined_, =verbatim= and ~code~, and,
+if you must, ‘+strike-through+’. Text in the code and verbatim string is not
+processed for Org mode specific syntax, it is exported verbatim.
+#+END_EXAMPLE
