--- a/README.org
+++ b/README.org
@@ -19,13 +19,17 @@ C-c < and C-c > to jump to first/last slide
 
 *** Unbinding
 
-#+BEGIN_EXAMPLE
-;; this will make the symbol my-nasty-variable's value void
-;; (makunbound 'my-nasty-variable)
-;; this will make the symbol my-nasty-function's
-;; function definition void
-;; (fmakunbound 'my-nasty-function)
-#+END_EXAMPLE
+This will make the symbol my-nasty-variable's value void:
+
+#+BEGIN_SRC emacs-lisp
+(makunbound 'my-nasty-variable)
+#+END_SRC
+
+This will make the symbol my-nasty-function's function definition void:
+
+#+BEGIN_SRC emacs-lisp
+(fmakunbound 'my-nasty-function)
+#+END_SRC
 
 ** Here Be Dragons
 
