Move comment to README

--- a/README.org
+++ b/README.org
@@ -17,6 +17,13 @@ C-c < and C-c > to jump to first/last slide
 #+END_EXAMPLE
 
 
+*** Zooming
+
+You can use =C-x C-+= and =C-x C--= (‘text-scale-adjust’) to increase
+or decrease the buffer text size (=C-+= or =C--= to repeat). To
+restore the default (global) face height, type =C-x C-0=. =S-mouse-1=
+pops up a menu where you can choose these same actions.
+
 *** Unbinding
 
 This will make the symbol my-nasty-variable's value void:
