--- a/README.org
+++ b/README.org
@@ -53,6 +53,11 @@ If I ever want to pin packages:
   :pin melpa-stable)
 #+END_SRC
 
+*** Helm
+
+- [[http://emacs-helm.github.io/helm/][Helm home page]]
+- [[http://tuhdo.github.io/helm-intro.html][Helm intro]]
+
 ** Here Be Dragons
 
 This setup is heavily customized, [[http://www.bryangarza.me/contact.html][let me know]] if you run into any problems and
