--- a/README.org
+++ b/README.org
@@ -148,6 +148,7 @@ I've configured it for the following languages:
 - Scala
 - Hy
 - LaTeX
+- Rust
 
 Other languages may work out-of-the-box, for example I have not changed any
 settings for Python but the default editing experience is decent as-is.
