--- a/README.org
+++ b/README.org
@@ -88,7 +88,7 @@ I'd like this configuration to be useful to others.
 
 OCaml settings require external installation, see
 [[https://github.com/realworldocaml/book/wiki/Installation-Instructions][Real World OCaml's GitHub wiki]]. If you don't care about OCaml, simply comment
-out ~(provide 'bryan-ocaml)~.
+out =bryan-ocaml= in =bryan-pkg-full=.
 
 *** IRC
 
