--- a/README.org
+++ b/README.org
@@ -194,6 +194,7 @@ I've configured it for the following languages:
 - Hy
 - LaTeX
 - Rust
+- Elm
 
 Other languages may work out-of-the-box, for example I have not changed any
 settings for Python but the default editing experience is decent as-is.
