--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+title: .emacs.d
 
-Read about switching from Vim to Emacs in my blog post, [[http://www.bryangarza.me/blog/my-descent-into-evil.html][My Descent Into Evil]].
+Read about switching from Vim to Emacs in my blog post, [[http://www.bryangarza.me/my-descent-into-evil.html][My Descent Into Evil]].
 
 * Table of Contents                                                :TOC_2_gh:
  - [[#important][Important!]]
